src/assets/styles/components/_select.scss
@use "../helpers/mixin";

.select {
  $this: &;

  position: relative;
  color: var(--grey-900);

  .tabs-container {
    width: 100%;
  }

  &__input {
    .input__icon {
      &--right {
        right: var(--space-14);
        pointer-events: none;
      }
    }

    input {
      &:not(&:disabled) {
        &:read-only {
          cursor: pointer;
        }
      }

    }
  }

  &__options {
    @include mixin.flexbox;
    @include mixin.flex-direction(column);
    position: fixed;
    z-index: 3;
    background-color: var(--white);
    color: var(--grey-900);
    padding: 0;
    margin-top: var(--space-4);
    box-shadow: var(--shadow-2);
    border-width: 0;
    border-style: solid;
    border-color: 0 var(--space-16);
    .option--active {
      background: var(--grey-100);
    }
    &__scroll {
      max-height: 300px;
      min-height: 40px;
      @media screen and (max-width: 768px) {
        overflow-y: auto;
        max-height: initial;
      }
    }

  }

  &__option, &__option__inner, &__option__content {
    @include mixin.flexbox;
    @include mixin.align-items(center);
    @include mixin.justify-content(space-between);
  }

  &__option {
    height: var(--size-32);
    padding: 0 var(--space-16);
    margin-bottom: var(--space-4);
    font: var(--font-weight-400) var(--font-size-12)/var(--line-height-sm) var(--font-family-primary);

    &:last-child {
      margin-bottom: 0;
    }

    &:hover {
      cursor: pointer;
      background-color: var(--grey-20);
    }

    &__inner, &__content {
      flex: 1;
      min-width: 1px;
    }

    &__content {
      @include mixin.justify-content(flex-start);
    }

    &__content__large {
      flex-direction: column;
      align-items: flex-start;
    }


    &__text {
      @include mixin.truncate(calc(100%));

      &__large {
        font-size: var(--font-size-14);
      }
    }

    &__meta {
      white-space: nowrap;
      color: var(--grey-500);

      &:before {
        content: '- ';
      }

      &__large {
        &:before {
          content: '';
        }
      }
    }
  }

  &__top {
    padding: var(--size-16) 0;
    margin: 0 var(--size-16);
    border-bottom: 1px solid var(--grey-100);
  }

  &__footer {
    @include mixin.flexbox;
    @include mixin.justify-content(space-between);
    @include mixin.align-items(center);
    height: var(--size-56);
    padding: 0 var(--size-16);
    border-top: 1px solid var(--grey-100);
  }

  &--large {
    #{$this}__options {
      border-radius: var(--border-radius-10);
    }
  }

  &--small {
    #{$this}__options {
      border-radius: var(--border-radius-8);
    }
  }

  &--menu {
    z-index: 9999;
    position: fixed;
    background-color: var(--white);
    box-shadow: var(--shadow-2);
    border-radius: var(--border-radius-4);
    min-width: var(--size-140);
    max-width: var(--size-240);
    padding: var(--space-8) 0;

    #{$this}__option {
      padding: 0 var(--space-16);
    }
  }

  &--multi {
    #{$this}__options__scroll {
      padding-top: var(--space-0);
    }

    .input {
      input {
        color: var(--grey-900);
      }
    }

    .divider {
      width: calc(100% - var(--space-32));
      margin: var(--space-8) auto;
    }
  }

  &--language {
    .input {
      max-width: 120px;

      input {
        text-overflow: unset;

        &:read-only {
          cursor: pointer;
        }
      }
    }
  }
}

.filter {
  &__input {
    margin: var(--space-16) var(--space-16) 0;
  }
}

.group-item {
  cursor: pointer;

  &__top {
    @include mixin.flexbox;
    @include mixin.align-items(center);
    padding: var(--space-8) var(--space-16);
  }

  &__title {
    flex: 1;
  }


  &__icon {
    //font-size: var(--ds-select-group-item-icon-size) !important;
  }
}

.content-top {
  padding: 0 var(--space-16);
  display: flex;
  flex-direction: column;
  width: 100%;
  @media screen and (max-width: 768px) {
    padding: 0 var(--space-16) 0 0;
    .search-container {
      align-items: center;
    }
  }

  .input {
    width: 100%;
  }

  &__label {
    margin: var(--space-10) 0;
  }

  &__search {
    padding: var(--space-8) 0;
  }
}

.action-bar {
  @include mixin.flexbox;
  @include mixin.justify-content(space-between);
  @include mixin.align-items(center);
  padding: var(--space-4) 0;

  &__right {
    position: relative;
  }
}

.select_button {
  box-shadow: none !important;
}


//MOBILE
@media screen and (max-width: 768px) {
  .select {
    width: 100%;

    .select__modal {
      .modal__content {
        height: 100%;
        display: flex;
        flex-direction: column;
        overflow: hidden;
        padding-bottom: 0;
        padding-right: 0;

        .mobile_top_content {
          display: flex;
          width: 100%;
          align-items: center;
          padding-right: var(--space-24);

          .input {
            width: 100%;
          }
        }
      }
    }


    .mobile_options_content {
      &__label {
        padding: 8px 0;
      }
    }
  }
}

[data-theme="dark"] {
  .select {
    color: var(--grey-100);

    &__options {
      background-color: var(--grey-20);
      border: 1px solid var(--grey-40);
      color: var(--grey-50);
      box-shadow: none;

      .option--active {
        background: var(--grey-20);
      }
    }

    &--menu {
      background-color: var(--grey-20);
      border: 1px solid var(--grey-40);
      box-shadow: none;
    }
  }
}

